<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    tools:context=".comic.view.ComicFragment">

    <FrameLayout
        android:id="@+id/flTopImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivImageComic"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim220dp"
            android:contentDescription="@string/landscape_image"
            tools:src="@tools:sample/backgrounds/scenic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim20dp"
            android:layout_marginTop="@dimen/dim80dp"
            android:background="@color/colorWhite"
            android:padding="@dimen/dim5dp">

            <ImageButton
                android:id="@+id/ibThumbnailComic"
                android:layout_width="@dimen/dim140dp"
                android:layout_height="@dimen/dim180dp"
                android:contentDescription="@string/thumbnail_image"
                android:padding="@dimen/dim0dp"
                tools:src="@tools:sample/avatars" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/ibBackButtonComic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim10dp"
            android:layout_marginTop="@dimen/dim10dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/back_button"
            android:padding="@dimen/dim10dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:tint="@color/colorWhite" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dim20dp"
        app:layout_constraintBottom_toTopOf="@id/lnBottomText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flTopImage">

        <TextView
            android:id="@+id/tvTitleComic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dim20dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:maxLines="2"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dim24sp"
            android:textStyle="bold"
            tools:text="@string/place_holder_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvDescriptionComic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorWhite"
                tools:text="@tools:sample/lorem/random" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnBottomText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dim20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/published_"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDateComic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim5dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorWhite"
                tools:text="@string/placeholder_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dim5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/price_"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPriceComic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim5dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorWhite"
                tools:text="@string/placeholder_money" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/pages_"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPageCountComic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim5dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorWhite"
                tools:text="@string/placeholder_page" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>