<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dim20dp"
    tools:context=".login.view.LoginFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorRed"
        app:cardCornerRadius="@dimen/dim10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingVertical="@dimen/dim20dp"
                android:text="@string/welcome_marvel"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dim26sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/loginshape"
                android:backgroundTint="@color/colorWhite"
                android:orientation="vertical"
                android:padding="@dimen/dim10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:fontFamily="@font/roboto"
                    app:boxBackgroundColor="@color/colorWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:fontFamily="@font/roboto"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:layout_marginTop="@dimen/dim10dp"
                    android:hint="@string/password"
                    app:boxBackgroundColor="@color/colorWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:fontFamily="@font/roboto"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:layout_height="wrap_content"
                    android:text="@string/remember" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLoginLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:layout_marginTop="@dimen/dim30dp"
                    android:padding="@dimen/dim10dp"
                    android:text="@string/log_in" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignupLogin"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlueDark2"
                    android:textSize="@dimen/dim16sp" />
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>